# NeatEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua  [B[B[B[B[Bqqq
Examples/FlappySpaceship/: CMakeLists.txt
Examples/FlappySpaceship/src/: ExampleLayer.cpp  ExampleLayer.hpp  FlappySpaceshipApp.cpp  GameLayer.cpp  GameLayer.hpp  SandboxApp.cpp
Neat/: CMakeLists.txt
Neat/Resources/Shaders/: Texture.glsl
Neat/include/: Neat.hpp
Neat/include/Neat/: Main.hpp
Neat/src/: .clang-format  Neat.h  Neat.hpp  NeatPCH.hpp
Neat/src/Components/: ActiveCameraTagComponent.hpp  BoxCollider2DComponent.hpp  CameraComponent.cpp  CameraComponent.hpp  Components.hpp  LabelComponent.hpp  OrthographicProperties.hpp  PerspectiveProperties.hpp  RenderableSpriteComponent.hpp  RigidBody2DComponent.hpp  TransformComponent.hpp
Neat/src/Core/: Application.cpp  Application.hpp  ApplicationCommandLineArguments.hpp  Assert.hpp  Constants.hpp  Core.hpp  Input.cpp  Input.hpp  KeyCodes.hpp  Layer.hpp  LayerGroup.cpp  LayerGroup.hpp  Limits.hpp  Log.hpp  Main.hpp  MouseButtonCodes.hpp  Timer.hpp  Types.hpp  Window.cpp  Window.hpp
Neat/src/Debug/: InstrumentationSession.hpp  InstrumentationTimer.hpp  Instrumentor.cpp  Instrumentor.hpp  Utils.hpp
Neat/src/ECS/: BaseComponent.cpp  BaseComponent.hpp  BaseSystem.cpp  BaseSystem.hpp  Component.hpp  ECS.hpp  EntityManager.cpp  EntityManager.hpp  System.cpp  System.hpp  SystemManager.hpp
Neat/src/EventDispatching/: EventConnectionHandle.hpp  EventConnections.hpp  EventDispatcher.cpp  EventDispatcher.hpp  EventHandler.hpp  QueuedEvent.hpp
Neat/src/Events/: KeyPressedEvent.hpp  KeyReleasedEvent.hpp  KeyTypedEvent.hpp  MouseButtonPressedEvent.hpp  MouseButtonReleasedEvent.hpp  MouseMovedEvent.hpp  MouseScrolledEvent.hpp  WindowResizeEvent.hpp
Neat/src/Graphics/: Color.cpp  Color.hpp  Framebuffer.cpp  Framebuffer.hpp  Graphics.hpp  GraphicsContext.cpp  GraphicsContext.hpp  IndexBuffer.cpp  IndexBuffer.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  RendererAPI.cpp  RendererAPI.hpp  ShaderDataType.cpp  ShaderDataType.hpp  ShaderLibrary.cpp  ShaderLibrary.hpp  ShaderProgram.cpp  ShaderProgram.hpp  SubTexture2D.hpp  Texture.hpp  Texture2D.cpp  Texture2D.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferElement.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp
Neat/src/ImGui/: ImGuiRender.cpp  ImGuiRender.hpp  ImGuiTools.cpp  ImGuiTools.hpp
Neat/src/Math/: Common.hpp  Common.inl  Constants.hpp  EulerAngles.hpp  EulerAngles.inl  Exponential.hpp  Exponential.inl  Interpolation.hpp  Interpolation.inl  Matrix.hpp  Projection.hpp  Projection.inl  Quaternion.hpp  Transform.hpp  Transform.inl  Trigonometric.hpp  Trigonometric.inl
Neat/src/Math/Types/: FunctorDoubleVector.hpp  FunctorTripleVector.hpp  FunctorVector.hpp  Matrix2x2.hpp  Matrix2x2.inl  Matrix3x3.hpp  Matrix3x3.inl  Matrix4x4.hpp  Matrix4x4.inl  TypeMatrixMxN.hpp  TypeQuaternion.hpp  TypeQuaternion.inl  TypeVectorN.hpp  Vector1.hpp  Vector1.inl  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl  Vector4.hpp  Vector4.inl
Neat/src/Neat/Components/: CameraComponent.cpp  CameraComponent.hpp  Components.hpp  LabelComponent.hpp  MainCameraTagComponent.hpp  OrthographicProperties.hpp  PerspectiveProperties.hpp  RenderableSpriteComponent.hpp  TransformComponent.hpp
Neat/src/Neat/Core/: Application.cpp  Application.h  Application.hpp  ApplicationCommandLineArguments.cpp  ApplicationCommandLineArguments.hpp  ApplicationProperties.hpp  Assert.hpp  Base.h  Base.hpp  Chronometer.h  Constants.hpp  Core.h  Core.hpp  EntryPoint.h  Exceptions.h  Exceptions.hpp  Input.h  Input.hpp  KeyCodes.h  KeyCodes.hpp  Layer.cpp  Layer.h  Layer.hpp  LayerGroup.cpp  LayerGroup.h  LayerGroup.hpp  Limits.h  Limits.hpp  Log.cpp  Log.h  Log.hpp  Main.h  Main.hpp  MouseButtonCodes.hpp  MouseCodes.h  MouseCodes.hpp  OrthographicCameraController.cpp  OrthographicCameraController.h  PlatformDetection.hpp  Stopwatch.h  (+11 more)
Neat/src/Neat/Debug/: Debug.hpp  InstrumentationTimer.hpp  Instrumentator.h  Instrumentor.hpp  ProfileResult.hpp  Utils.hpp
Neat/src/Neat/ECS/: BaseComponent.cpp  BaseComponent.hpp  (+36 more)
Neat/src/Scene/: ComponentSerializationProperties.hpp  ComponentSerializationRegistry.cpp  ComponentSerializationRegistry.hpp  EditorCamera.cpp  EditorCamera.hpp  Reflectors.hpp  Scene.cpp  Scene.hpp  SceneSerializer.cpp
Neat/src/Systems/: OrthographicCameraControllerSystem.cpp  OrthographicCameraControllerSystem.hpp  Physics2DSystem.cpp  Physics2DSystem.hpp  Physics2DUtils.cpp  Physics2DUtils.hpp  Render2DSystem.cpp  Render2DSystem.hpp  Systems.hpp
Neat/src/Utils/: FPSCounter.cpp  FPSCounter.hpp  LoadImage.hpp  MemoryPool.hpp  Random.hpp  ReadFile.hpp  SafeQueue.hpp  SafeQueue.inl  TimeConversions.hpp  TypeConversions.cpp  TypeConversions.hpp  TypeID.hpp  TypeId.hpp
NeatEditor/: CMakeLists.txt  imgui.ini
NeatEditor/Assets/Scenes/: new_scene.neat  scene.yaml
NeatEditor/Resources/Scenes/: new_scene.neat  physics.scene  scene.neat
NeatEditor/src/: ComponentWidgetsRegistry.cpp  ComponentWidgetsRegistry.hpp  ComponentWidgetsRenderer.cpp  ComponentWidgetsRenderer.hpp  ContentBrowserPanel.cpp  ContentBrowserPanel.hpp  Editor.cpp  EditorLayer.cpp  EditorLayer.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp
Sandbox/: CMakeLists.txt
Sandbox/assets/glsl/: flat_color.glsl  texture.glsl
Sandbox/src/: ExampleLayer.cpp  ExampleLayer.hpp  Sandbox2D.cpp  Sandbox2D.h  Sandbox2D.hpp  SandboxApp.cpp
Tests/: .clang-format  CMakeLists.txt  EventConnectionsTest.cpp  SafeQueueTest.cpp  TypeIdTest.cpp
Tests/src/: EntityManagerBenchmarkTest.cpp  EntityManagerTest.cpp  EntityTest.cpp  EventConnectionsTest.cpp  EventDispatcherBenchmarkTest.cpp  EventDispatcherTest.cpp  LayerGroupTest.cpp  MathCommonTest.cpp  MatrixTest.cpp  MemoryPoolTest.cpp  RandomTest.cpp  SafeQueueTest.cpp  SystemManagerTest.cpp  TestUtils.cpp  TestUtils.hpp  TimeConversionsTest.cpp  TypeIdTest.cpp  VectorTest.cpp
(+648 files in other folders)
